# majsoul-autopilot

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  README.zh-CN.md  README_ZH.md  autoplay_loop.sh  pyproject.toml  requirements.txt  run_autoplay.py  run_webui.py  settings.example.json  settings.json.example  settings.py
akagi/: core.py  jsonl_logger.py  libriichi_helper.py
akagi/webui/: server.py  watcher.py
akagi/webui/static/: index.html
akagi/webui/static/assets/: index-BKfys_gL.js  index-BdaEQ9kd.js  index-CettDT2G.js  index-ChHpceB-.css  index-D0Yz8man.js  index-DhN7VyJt.css  index-Vpni-JcF.css  index-WcXhmM8E.js
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/public/tiles-modern/: README.md
apps/desktop/scripts/: hule-display-check.mjs  runtime-state-check.mjs  visual-check.mjs  visual-replay.mjs  visual-scenarios.mjs
apps/desktop/src/: App.tsx  GameTable.tsx  i18n.ts  store.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
autoplay/: action_converter.py  majsoul_automation.py  protocol_automation.py
autoplay/js/: hook_websocket.js
crates/autoplay/: Cargo.toml
crates/autoplay/src/: action.rs  events.rs  lib.rs  runtime.rs  settings.rs  table.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/liqi/: Cargo.toml  build.rs
crates/liqi/src/: codec.rs  lib.rs
crates/mjai/: Cargo.toml
crates/mjai/src/: bridge.rs
crates/mortal/: Cargo.toml
crates/mortal/src/: action_space.rs  bot.rs  candle_engine.rs  config.rs  lib.rs  model_import.rs  native.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: config.rs  lib.rs  login.rs  routes.rs  session.rs  transport.rs
crates/riichi-core/: Cargo.toml
crates/riichi-core/src/: consts.rs  lib.rs
crates/riichi-core/src/state/: mod.rs  obs_repr.rs  player_state.rs
majsoul/: __init__.py  bridge.py  client.py  logger.py  protocol.py
mitm/: client.py  majsoul.py
mitm/bridge/: __init__.py
mitm/bridge/majsoul/: bridge.py  liqi.py
mjai_bot/: bot.py  controller.py
mjai_bot/mortal/: bot.py  model.py
settings/: __init__.py  settings.json.example  settings.py  settings.schema.json
tests/: test_protocol_recovery.py  test_webui_watcher.py
tools/: export_mortal.py  package_macos_release.sh
webui/: package-lock.json  package.json  vite.config.js
webui/src/: App.css  App.jsx
webui/src/components/: DiscardPile.jsx  GameBoard.jsx  Hand.jsx  InfoBar.jsx  Meld.jsx  Recommendations.jsx  Tile.css  Tile.jsx
webui/src/hooks/: useWebSocket.js
webui/src/state/: gameReducer.js
webui/src/utils/: tiles.js
