[workspace]
members = [
    "crates/autoplay",
    "crates/cli",
    "crates/liqi",
    "crates/mjai",
    "crates/mortal",
    "crates/protocol",
    "crates/riichi-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
candle-core = "0.9"
candle-nn = "0.9"
clap = "4.5"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
http = "1.3"
md5 = "0.7"
prost = "0.13"
rustls = "0.23"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = "1.48"
tokio-tungstenite = "0.28"
