[package]
name = "majsoul-autopilot-rs"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "majsoul-autopilot-rs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
autoplay = { path = "../autoplay" }
clap = { workspace = true, features = ["derive"] }
liqi = { path = "../liqi" }
mjai = { path = "../mjai" }
mortal = { path = "../mortal" }
protocol = { path = "../protocol" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
