[package]
name = "protocol"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
hmac.workspace = true
http.workspace = true
liqi = { path = "../liqi" }
prost.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
hex.workspace = true
